# hongtu

./: .gitignore  .review_diff_temp.diff  README.md  backup.bat  build.bat  clear_data.py  design-review.html  desktop_app.py  generate_icon.py  hongtu.spec  pyproject.toml  requirements.txt  run.py  start.bat  tmp_zq1.py  tmp_zq2.py  tmp_zq3.py  tmp_zq4.py  tray.py
.claude/: CLAUDE.md
app/: __init__.py  config.py  extensions.py  logging_config.py  models.py  request_logging.py
app/routes/: customers.py  dashboard.py  leads.py  scraper.py
app/templates/: base.html  dashboard.html  macros.html
docs/: ctbpsp-采集可行性调研报告.md  eia-guangzhou-dongguan-solution-review.md  ggzyjy-guangdong-feasibility-report.md  ggzyjy-其他省份-调研报告.md  qyggzy-清远公共资源交易-调研报告.md  zhaoqing-eia-feasibility-report.md  发改委-采集可行性调研报告.md  数据源扩展-可行性调研实施报告.md  数据源调研总结.md  未实现数据源-可行性调研报告.md  爬虫提速-详情前置去重计划.md  第一阶段改进计划.md  第三阶段改进计划.md  第二阶段改进计划.md  第四阶段改进计划.md  行业垂直平台-调研报告.md  采集渠道真实抓取验证报告.md  采集渠道真实抓取验证计划.md  销售线索采集分析报告.md
scraper/: base.py  ccgp.py  eia.py  gdgpo.py  keywords.py  lifecycle.py  playwright_utils.py  poi.py  poi_regions.py  progress.py  qcc.py  registry.py  scheduler.py  utils.py
scraper/bjx/: __init__.py  browser.py  parser.py  utils.py
scraper/ccgp/: __init__.py  (+6 more)
tests/: conftest.py  test_bjx.py  test_eia.py  test_eia_live.py  test_epoint.py  test_fdtz.py  test_gdcic.py  test_ggzyjy.py  test_gzfcj.py  test_keywords.py  test_lifecycle.py  test_live_smoke.py  test_pipebiz.py  test_playwright_utils.py  test_poi_regions.py  test_qcc.py  test_scraper_utils.py  test_winner_extraction.py
(+65 files in other folders)
