[project]
name = "hongtu-customer-tool"
version = "1.0.0"
description = "鸿图建材获客工具 - 政府采购网招标信息采集与客户管理"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0",
    "Flask-SQLAlchemy~=3.1",
    "Flask-Migrate~=4.0",
    "Flask-Login~=0.6",
    "Flask-WTF~=1.2",
    "httpx~=0.27",
    "beautifulsoup4~=4.12",
    "lxml~=5.0",
    "APScheduler~=3.10",
    "waitress~=2.1",
    "python-dotenv~=1.0",
    "openpyxl~=3.1",
]
